<resources>
    <string name="app_name">Ann</string>
    <string name="navigation_title_home">首页</string>
    <string name="navigation_title_algorithms">A</string>
    <string name="navigation_title_platform">平台</string>
    <string name="navigation_title_main">我</string>
    <string name="navigation_title_platform_title">目录</string>
    <string name="common_no_content">暂无内容</string>

    <string name="function_empty_text">暂无数据</string>
    <string name="common_clean">清除</string>
    <string name="common_exe">执行</string>
    <string name="common_stop">停止</string>
    <string name="text_terminate">中断锁</string>
    <string name="text_deadlock">死锁</string>
    <string name="text_reentrantlock">ReentrantLock</string>
    <string name="text_p_c">生产者-消费者模式</string>
    <string name="text_cyclicbarrier">CyclicBarrier</string>
    <string name="text_semaphore">Semaphore</string>
    <string name="text_phaser">Phaser</string>
    <string name="text_countdownlatch">CountDownLatch</string>
    <string name="text_exchanger">Exchanger</string>

    <string name="text_copy">复制文件</string>
    <string name="text_use_filechannel">使用FileChannel</string>
    <string name="text_use_buffer">Buffer</string>
    <string name="text_use_transfer">数据传输</string>
    <string name="text_use_pipe">Pipe</string>
    <string name="text_use_socketchannel">SocketChannel</string>

    <string name="text_start">启动</string>
    <string name="text_send">发送</string>
    <string name="text_stop">停止</string>

    <string name="text_bio">bio</string>
    <string name="text_nio">nio</string>
    <string name="text_aio">aio</string>
    <string name="text_okio">okio</string>


    <string name="text_read_write">文件读写</string>
    <string name="text_append">文件内容的追</string>
    <string name="text_with_path">通过路径来读写文件</string>
    <string name="text_write_buffer">写buffer</string>
    <string name="text_read_buffer">读buffer</string>
    <string name="title_dynamic_feature">Module Title</string>

</resources>
