<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <HorizontalScrollView
        android:id="@+id/hs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/clear"
                style="@style/btn.style"
                android:text="@string/common_clean" />

            <Button
                android:id="@+id/btn1"
                style="@style/btn.style"
                android:text="@string/text_terminate" />

            <Button
                android:id="@+id/btn2"
                style="@style/btn.style"
                android:text="@string/text_deadlock" />

            <Button
                android:id="@+id/btn3"
                style="@style/btn.style"
                android:text="@string/text_reentrantlock" />

            <Button
                android:id="@+id/btn4"
                style="@style/btn.style"
                android:text="@string/text_p_c" />

            <Button
                android:id="@+id/btn5"
                style="@style/btn.style"
                android:text="@string/text_countdownlatch" />

            <Button
                android:id="@+id/btn6"
                style="@style/btn.style"
                android:text="@string/text_semaphore" />

            <Button
                android:id="@+id/btn7"
                style="@style/btn.style"
                android:text="@string/text_phaser" />

            <Button
                android:id="@+id/btn8"
                style="@style/btn.style"
                android:text="@string/text_cyclicbarrier" />

            <Button
                android:id="@+id/btn9"
                style="@style/btn.style"
                android:text="@string/text_exchanger" />

        </LinearLayout>
    </HorizontalScrollView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/hs"
        android:layout_marginTop="@dimen/common_scroll_margin_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/common_info_text_size" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
