<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_index_home"
        android:title="@string/navigation_title_home" />

    <item
        android:id="@+id/navigation_algorithms"
        android:icon="@drawable/ic_index_algorithms"
        android:title="@string/navigation_title_algorithms" />

    <item
        android:id="@+id/navigation_platform"
        android:icon="@drawable/ic_index_platform"
        android:title="@string/navigation_title_platform" />

    <item
        android:id="@+id/navigation_other"
        android:icon="@drawable/ic_index_other"
        android:title="@string/navigation_title_other" />

    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/ic_index_main"
        android:title="@string/navigation_title_main" />

</menu>
